--- a/source/Internal/Framework/Database/Logger/services.yaml
+++ b/source/Internal/Framework/Database/Logger/services.yaml
@@ -32,10 +32,10 @@ services:
 
   database.psr_logger:
     class: database.monolog_logger_factory
-    factory: database.monolog_logger_factory:create
+    factory: ['@database.monolog_logger_factory', 'create']
 
   utility.context.admin_log_file_path:
     class: OxidEsales\EshopCommunity\Internal\Transition\Utility\ContextInterface
     public: true
-    factory: OxidEsales\EshopCommunity\Internal\Transition\Utility\ContextInterface:getAdminLogFilePath
+    factory: ['@OxidEsales\EshopCommunity\Internal\Transition\Utility\ContextInterface', 'getAdminLogFilePath']
 
