--- a/source/Internal/Framework/Smarty/services.yaml
+++ b/source/Internal/Framework/Smarty/services.yaml
@@ -32,7 +32,7 @@ services:
     class: OxidEsales\EshopCommunity\Internal\Framework\Smarty\Legacy\LegacySmartyEngineFactory
   OxidEsales\EshopCommunity\Internal\Framework\Templating\TemplateEngineInterface:
     class: OxidEsales\EshopCommunity\Internal\Framework\Smarty\Legacy\LegacySmartyEngine
-    factory: 'smarty.smarty_engine_factory:getTemplateEngine'
+    factory: ['@smarty.smarty_engine_factory', 'getTemplateEngine']
   OxidEsales\EshopCommunity\Internal\Framework\Templating\TemplateRendererBridgeInterface:
     class: OxidEsales\EshopCommunity\Internal\Framework\Smarty\Bridge\SmartyTemplateRendererBridge
     public: true
