--- a/source/Internal/Framework/FileSystem/bootstrap-services.yaml
+++ b/source/Internal/Framework/FileSystem/bootstrap-services.yaml
@@ -4,7 +4,7 @@ services:
     public: false
 
   oxid_esales.common.storage.flock_store_lock_factory:
-    class: Symfony\Component\Lock\Factory
+    class: Symfony\Component\Lock\LockFactory
     arguments:
       - '@oxid_esales.common.storage.flock_store'
 
